# molphene

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  Brewfile  CMakeLists.txt  Dockerfile  LICENSE  README
bins/app/: CMakeLists.txt
bins/app/src/molphene/: basic_application.hpp  buffers_builder.hpp
bins/glfw/: CMakeLists.txt
bins/glfw/src/: application.cpp  application.hpp  basic_application.hpp  click_state.hpp  main.cpp
bins/web/: CMakeLists.txt
bins/web/src/: application.cpp  application.hpp  click_state.hpp  embind-MainApp.cpp  main.cpp
cmake/cmakelists/libmolphene/: CMakeLists.txt
cmake/cmakelists/molphene/: CMakeLists.txt
cmake/cmakelists/molphene-glfw/: CMakeLists.txt
cmake/cmakelists/molphene-test/: CMakeLists.txt
cmake/cmakelists/molphene-web/: CMakeLists.txt
libs/core/: CMakeLists.txt
libs/core/src/molphene/: algorithm.hpp  attribs_buffer_array.hpp  ballstick_instancing_representation.cpp  ballstick_instancing_representation.hpp  ballstick_representation.cpp  ballstick_representation.hpp  basic_light.hpp  basic_shader.hpp  bounding_sphere.hpp  buffers_builder.hpp  camera.hpp  color_image_texture.hpp  color_light_buffer.hpp  color_light_shader.cpp  color_light_shader.hpp  color_manager.cpp  color_manager.hpp  cylinder_mesh_attribute.hpp  cylinder_mesh_builder.hpp  cylinder_vertex_buffers_batch.hpp  cylinder_vertex_buffers_instanced.hpp  directional_light.hpp  drawable.hpp  expand_iterator.hpp  fog.hpp  gl_renderer.cpp  gl_renderer.hpp  gl_vertex_attribs_guard.hpp  image_texture.hpp  instance_copy_builder.hpp  m3d.hpp  material.hpp  mix_shader_uniforms.hpp  molecule_display.hpp  molecule_to_shape.hpp  opengl.hpp  point_light.hpp  scene.cpp  scene.hpp  shader_attrib_location.hpp  (+15 more)
libs/core/src/molphene/detail/: empty.hpp
libs/core/src/molphene/gl/: buffer.hpp  draw_instanced_arrays.hpp  texture_image_2d.hpp
libs/core/src/molphene/shape/: cylinder.hpp  sphere.hpp
libs/gfxm/: CMakeLists.txt
libs/gfxm/src/gfxm/: all.hpp  mat3.hpp  mat4.hpp  quat.hpp  rgba.hpp  vec.hpp  vec2.hpp  vec3.hpp
libs/gfxm/src/gfxm/detail/: basic_rgba.hpp  type_traits.hpp
libs/gfxm/test/: matrix3.cpp  matrix4.cpp  rgba_float.cpp  rgba_uint8.cpp  vector2.cpp  vector3.cpp
libs/io/: CMakeLists.txt
libs/io/src/molphene/io/: click_state.cpp  click_state.hpp
libs/molecule/: CMakeLists.txt
libs/molecule/src/molecule/: Atom.cpp  Atom.hpp  AtomInsertIterator.hpp  AtomRadiusType.hpp  Bond.hpp  BondInsertIterator.hpp  Chain.cpp  Chain.hpp  Compound.cpp  Compound.hpp  Model.hpp  Molecule.cpp  Molecule.hpp  atom.cpp  atom.hpp  atom_insert_iterator.hpp  atom_radius_kind.hpp  bond.cpp  bond.hpp  bond_insert_iterator.hpp  chemdoodle_json_parser.cpp  chemdoodle_json_parser.hpp  m3d.hpp  molecule.cpp  molecule.hpp  stdafx.hpp
src/: Atom.cpp  Atom.h  BasicLight.hpp  BasicShader.hpp  Basic_light.hpp  Basic_shader.hpp  Bond.cpp  Bond.h  BoundingSphere.cpp  BoundingSphere.h  BoundingSphere.hpp  Bounding_sphere.hpp  Camera.cpp  Camera.h  Camera.hpp  Chain.cpp  Chain.h  ColorLightBuffer.cpp  ColorLightRenderer.cpp  ColorLightRenderer.h  ColorLightShader.cpp  ColorLightShader.hpp  Color_light_buffer.cpp  Color_light_buffer.hpp  Color_light_shader.cpp  Color_light_shader.hpp  ColourManager.cpp  ColourManager.h  Colour_manager.cpp  Colour_manager.hpp  Compound.cpp  Compound.h  CylinderMeshBuilder.cpp  CylinderMeshBuilder.h  DirectionalLight.hpp  Directional_light.hpp  Element.cpp  Element.h  Fog.hpp  Material.hpp  (+61 more)
src/lib/molphene/: AttribsBufferArray.hpp  BallStickRepresentation.cpp  BallStickRepresentation.hpp  BasicLight.hpp  BasicShader.hpp  BoundingSphere.hpp  Camera.hpp  ColorLightBuffer.cpp  ColorLightBuffer.hpp  ColorLightShader.cpp  ColorLightShader.hpp  ColourManager.cpp  ColourManager.hpp  CylinderMeshBuilder.hpp  DirectionalLight.hpp  ExpandIterator.hpp  Fog.hpp  GlRenderer.cpp  GlRenderer.hpp  GlVertexAttribsGuard.hpp  Material.hpp  MixShaderUniforms.hpp  MoleculeRepresentation.hpp  PointLight.hpp  QuadShader.cpp  QuadShader.hpp  Scene.cpp  Scene.hpp  ShaderAttribLocation.hpp  SpacefillRepresentation.cpp  SpacefillRepresentation.hpp  SphereMeshBuilder.cpp  SphereMeshBuilder.hpp  SpotLight.hpp  VertexAttribsBuffer.hpp  Viewport.hpp  algorithm.hpp  attribs_buffer_array.hpp  ballstick_representation.cpp  ballstick_representation.hpp  (+33 more)
src/lib/molphene/m3d/: Mat3.hpp  Mat4.hpp  Rgba32f.cpp  Rgba32f.hpp  Rgba8.cpp  Rgba8.hpp  Vec2.hpp  Vec3.hpp
src/lib/molphene/mol/: Atom.cpp  Atom.hpp  AtomInsertIterator.hpp  AtomInserterIterator.hpp  AtomRadiusType.hpp  Bond.cpp  Bond.hpp  BondInsertIterator.hpp  BondInserterIterator.hpp  Chain.cpp  Chain.hpp  Compound.cpp  Compound.hpp  Model.cpp  Model.hpp  Molecule.cpp  Molecule.hpp  PdbParser.cpp  PdbParser.hpp
src/lib/molphene/shape/: Cylinder.hpp  Sphere.hpp  UvSphere.hpp  cylinder.hpp  sphere.hpp
src/m3d/: Mat3.hpp  Mat4.hpp  Rgba32f.cpp  Rgba32f.hpp  Rgba8.cpp  Rgba8.hpp  Vec2.hpp  Vec3.hpp
src/mol/: Atom.cpp  Atom.hpp  Chain.cpp  Chain.hpp  Compound.cpp  Model.cpp  Model.hpp  Molecule.hpp  PdbParser.cpp  PdbParser.hpp  Pdb_parser.cpp  Pdb_parser.hpp
src/shape/: Sphere.hpp  UvSphere.hpp  Uv_sphere.hpp
test/: color.cpp  matrix4.cpp  vector3.cpp
tools/: linux-emscripten-build-debug.js  linux-emscripten-build-install-release.js  linux-emscripten-configure-debug.js  linux-emscripten-configure-release.js  macos-emscripten-build.js  macos-emscripten-configure.js  macos-run-static-analyzer.js  macos-run-test.js
tools/cmake/: Findnlohmann_json.cmake
